tests/compile-fail/01-assign-to-immutable.stderr
error[E0384]: cannot assign twice to immutable variable `x`
 --> tests/compile-fail/01-assign-to-immutable.rs:6:1
  |
6 | #[workflow]
  | ^^^^^^^^^^^ cannot assign twice to immutable variable
7 | fn immutable_assign() {
8 |     let x = 1;
  |         - first assignment to `x`
  |
  = note: this error originates in the attribute macro `workflow` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider making this binding mutable
  |
8 |     let mut x = 1;
  |         +++
